# vertcohirf

./: .gitignore  README.md  package-list.txt  pyproject.toml  requirements.txt
analyze_runs/: analyze_runs_openml_dauphine.py  analyze_runs_openml_tgcc.py
cocohirf/experiment/: classification_experiment.py  coclustering_experiment.py  custom_experiment.py  hpo_open_ml_coclustering_experiment.py  hpo_open_ml_vecohirf_experiment.py  hpo_vecohirf_experiment.py  open_ml_coclustering_experiment.py  tested_models.py
cocohirf/models/: coreset_kmeans.py  distributed_kmeans.py  dpvfl.py
cocohirf/models/dpvfl_repo/: README.md  main.py
cocohirf/models/dpvfl_repo/solutions/: PrivLSH.py  (+6 more)
notebooks/: attack_rank.py  custom.ipynb  custom.py  hypercube.ipynb  hypercube.py  iris-silhouette-ari.ipynb  mixcohirf_example copy.ipynb  mixcohirf_example.ipynb  mixcohirf_example.py  multimodal.ipynb  multimodal.py  spheres.ipynb  spheres.py  test_hpo.ipynb  test_hpo.py
scripts/: real-agents-others.sh  real-agents-vertcohirf.sh  real-colab-others.sh  real-colab-vertcohirf.sh  real-partial.sh
vertcohirf/experiment/: blob_experiment.py  classification_experiment.py  coclustering_experiment.py  custom_experiment.py  hpo_open_ml_coclustering_experiment.py  hpo_open_ml_vecohirf_experiment.py  hpo_vecohirf_experiment.py  open_ml_coclustering_experiment.py  spheres_experiment.py  tested_models.py
vertcohirf/experiment/vertibench/: evaluator.py  splitter.py
vertcohirf/models/: coreset_kmeans.py  distributed_kmeans.py  dpvfl.py  vfckm.py  vfdpc.py
vertcohirf/models/dpvfl_repo/: main.py
(+35 files in other folders)
